# madnlp_c

./: .gitignore  .gitmodules  CMakeLists.txt  LocalPreferences.toml  Manifest.toml  Project.toml  Readme.md
.github/workflows/: build.yml
compiler/: Manifest.toml  additional_precompile.jl  build.jl  generate_precompile.jl  madnlp_c.h
src/: MadNLP_C.jl  madnlp_c.h
tests/: CMakeLists.txt  main.cpp
